Telefonliste og katastrofesjekklist
Endrer navn på table, og la til kommunelegekontaktinfo, prøver å
referere til dette må sjekkes i compilering. Prøver å committe i
branchen telefonliste

--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -36,11 +36,12 @@
 \begin{document}
 
 \renewcommand{\chaptername}{Del}
+\renewcommand{\tablename}{Liste:}
 %\renewcommand{\thesection}
 
 \renewcommand{\bibname}{Kilder:}
 \renewcommand{\contentsname}{Innhold:}
-\renewcommand{\listfigurename}{Oversikt over tableller og bilder:}
+\renewcommand{\listfigurename}{Oversikt over bilder:}
 
 %tittelsidestart
 \input{./tittel.tex}
@@ -253,11 +254,17 @@
 \chapter{Når store ulykker skjer}
 	\section{Personlige tragedier}
 		\begin{itemize}
-			\item
+			\item Snakk med pasienten
+			\item Vurder henvising til DPS
+			\item Be sykepleier tinge kriseteam dersom det er behov for mer oppfølging
 		\end{itemize}
 	\section{Mange involverte}
 		\begin{itemize}
-			\item
+			\item Ring kommunelegen på \ref{itm:paw_mob} eller \ref{itm:eb_mob}
+			\item Gi sykepleier beskjed om å kontakte sin leder for å kalle inn ekstrasykepleiere
+			\item Send friske hjem. Avtal dette med sykepleier
+			\item Fortsett som lege på legevakten, ikke glem at folk kan få infarkt og annet selv om en stor hendelse skjer
+			\item Trykk og hold inne "4" på nødnettradioen, der kan du lytte på hva som skjer
 		\end{itemize}
 
 \newpage
@@ -327,12 +334,32 @@
 					\hline
 					{\textbf Hvem} & {\textbf Legekontor} &{\textbf Nummer}\\[0.75pt]
 					\hline
-					Terje Eng \newline Terje Austad \newline Rie Krat Bjørkholt \newline Agnieszka Magdalena Wilkosz \newline Sofia Øien \newline Else Malthe Sørenessen & Legehuset A/S \newline Postboks 84 \newline 3XXX HOKKSUND & post@legehuset.nhn.no \\
+					Terje Eng \newline Terje Austad \newline Rie Krat Bjørkholt \newline Agnieszka Magdalena Wilkosz \newline Sofia Øien \newline Else Malthe Sørenessen & Legehuset A/S \newline Postboks 84 \newline 3301 HOKKSUND & post@legehuset.nhn.no \\
 					\hline
 					Dag Håvard Pettersen \newline Dana Andras & Skotselv legesenter \newline XXXX \newline XXX Hokksund &  dahpe@online.no\\
 					\hline
+					Stine Kirsch Warlo \newline Arne Kummen & Stasjonsgata Legekontor \newline Stasjonsgata \newline 3300 Hokksund &  stine@warlo.no\\
+					\hline
 				\end{tabular}
 			\end{table}
+	\section{Kommunelegene}
+			\begin{table}[ht]
+				\caption{Viktig kontaktinformasjon}
+				\centering
+				\rowcolors{1}{cyan}{white}
+				\begin{tabular}{|p{6cm}| p{5cm}| p{5cm}|}
+					\hline
+					{\textbf Hvem} & {\textbf Epost} &{\textbf Nummer}\\[0.75pt]
+					\hline
+					Pål Ager-Wick \newline Einar Braaten & paal@oeiker.no\newline einar.braaten@oeiker.no\newline kommunelegen@oeiker.no & 948 00 344\label{itm:paw_mob}\newline40 20 30 004\label{itm:eb_mob} \\
+					\hline
+					Dag Håvard Pettersen \newline Dana Andras & Skotselv legesenter \newline XXXX \newline XXX Hokksund &  dahpe@online.no\\
+					\hline
+					Stine Kirsch Warlo \newline Arne Kummen & Stasjonsgata Legekontor \newline Stasjonsgata \newline 3300 Hokksund &  stine@warlo.no\\
+					\hline
+				\end{tabular}
+			\end{table}
+
 
 %Kildehenvisinger
 
