--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -260,7 +260,7 @@
 		\end{itemize}
 	\section{Mange involverte}
 		\begin{itemize}
-			\item Ring kommunelegen på \ref{itm:paw_mob} eller \ref{itm:eb_mob}
+			\item Ring kommunelegen på \nameref{itm:paw_mob} eller \nameref{itm:eb_mob}
 			\item Gi sykepleier beskjed om å kontakte sin leder for å kalle inn ekstrasykepleiere
 			\item Send friske hjem. Avtal dette med sykepleier
 			\item Fortsett som lege på legevakten, ikke glem at folk kan få infarkt og annet selv om en stor hendelse skjer
@@ -353,10 +353,8 @@
 					\hline
 					Pål Ager-Wick \newline Einar Braaten & paal@oeiker.no\newline einar.braaten@oeiker.no\newline kommunelegen@oeiker.no & 948 00 344\label{itm:paw_mob}\newline40 20 30 004\label{itm:eb_mob} \\
 					\hline
-					Dag Håvard Pettersen \newline Dana Andras & Skotselv legesenter \newline XXXX \newline XXX Hokksund &  dahpe@online.no\\
-					\hline
-					Stine Kirsch Warlo \newline Arne Kummen & Stasjonsgata Legekontor \newline Stasjonsgata \newline 3300 Hokksund &  stine@warlo.no\\
-					\hline
+					
+					
 				\end{tabular}
 			\end{table}
 
