La til kommando for nummervariabler
La til faste nummer til meg og einar for ref

--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -25,6 +25,10 @@
 \pagestyle{ruled}
 \chapterstyle{hangnum}
 
+%spesialreferanser
+\newcommand{\pawmob}{948 00 344}
+\newcommand{\ebmob}{40 20 30 04}
+\newcommand{\klmail}{kommunelegen@oeiker.no}
 
 
 %Doc properties
