La til curly brace
http://tex.stackexchange.com/questions/31091/space-after-latex-commands

compilert med suksess

--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -26,7 +26,7 @@
 \chapterstyle{hangnum}
 
 %spesialreferanser
-\newcommand{\pawmob}{948 00 344 }
+\newcommand{\pawmob}{948 00 344}
 \newcommand{\ebmob}{40 20 30 04}
 \newcommand{\klmail}{kommunelegen@oeiker.no}
 
@@ -148,7 +148,7 @@
 		\end{itemize}
 	\section{Tilbakemeldinger}\label{sec:elv_feedbk}
 		\begin{itemize}
-			\item SMS til \pawmob om det er noe som må endres på legevakta, eller noe som ikke har fungert.
+			\item SMS til \pawmob{} om det er noe som må endres på legevakta, eller noe som ikke har fungert.
 		\end{itemize}
 
 \newpage
@@ -264,7 +264,7 @@
 		\end{itemize}
 	\section{Mange involverte}
 		\begin{itemize}
-			\item Ring kommunelegen på \pawmob eller \ebmob
+			\item Ring kommunelegen på \pawmob{} eller \ebmob{}
 			\item Gi sykepleier beskjed om å kontakte sin leder for å kalle inn ekstrasykepleiere
 			\item Send friske hjem. Avtal dette med sykepleier
 			\item Fortsett som lege på legevakten, ikke glem at folk kan få infarkt og annet selv om en stor hendelse skjer
