Alle \newcommand nå med {}

--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -355,7 +355,7 @@
 					\hline
 					{\textbf Hvem} & {\textbf Epost} &{\textbf Nummer}\\[0.75pt]
 					\hline
-					Pål Ager-Wick \newline Einar Braaten & paal@oeiker.no\newline einar.braaten@oeiker.no\newline \klmail & \pawmob \newline \ebmob \\
+					Pål Ager-Wick \newline Einar Braaten & paal@oeiker.no\newline einar.braaten@oeiker.no\newline \klmail{} & \pawmob{} \newline \ebmob{} \\
 					\hline
 					
 					
