PRøvde å legge til makeindex
Makeindex på i preamble, definere typer indexer der deretter må disse
legges inn på steder i teksten…

Preamble: makeindex {nøkkelord}
makeindex{bidragsytere}
begin doc…
\index{nøkkleord}{Relevant ord}

--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -66,7 +66,7 @@
 	I vedlegget er listene i utskriftsvennlig format. Det er på sikt tenkt at disse skal fylles ut på nett. Foreløpig tar vi papirutgaven. 
 
 \chapter{Hvorfor gjør vi dette?}\label{chap:desc_lv_start}
-	\section{Praktiske ting før vakten begynner}
+	\section{Praktiske ting før vakten begynner}\index{Før legevakt}{Test}
 	Det er noe sjekkpunkter som viktige før vakten begynner og gjøremålene før vakta er i gang står i kapittelet~"\nameref{chap:lv_start}" fra side \pageref{chap:lv_start}. "\nameref{sec:start_kontor}" gjennomgår alle de viktige tingene på kontoret. Det spesielt viktig å lese loggen fordi ny og viktig info vil stå der om tnig som vil være viktig for DIN vakt. For eksempel vil det kunne stå om hvilket sykehus som ikke kan ta pasienter fordi det er overbelegg. Det vil kunne være viktige meldinger om medisiner vi ikke har på legevakten, eller om farlige folk som har truet legegvakten.\\
 
 	Husk at matpauser er viktige og obligatoriske. I tillegg er den viktigste samrabeidspartneren din sykepleier og hun må vite hvem du er og hvordan hun best kan hjelpe deg. Når sjekklisa er ferdig utfyllt så skal dere gå gjennom punktene samen og hun signerer sammen med deg.\\
@@ -109,6 +109,7 @@
 \end{thebibliography}
 
 \newpage
+
 \listoffigures
 
 \end{document}
