Lagt til  traumesjekkliste
Innenfor og utenfor legevakt. Skrevet litt om i kapittel. Innført
pasienteksempler.

--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -87,6 +87,34 @@
 
 	"\nameref{sec:elv_feedbk}" er kanskje det viktigste punktet. 
 
+\chapter{Akuttmedisin}\label{chap:desc_chk_akuttmed}	
+	\section{Alvorlige skader på skadested eller legevakt}\label{sec:desc_chk_traume}
+	"Slow is smooth and smooth is fast" - US special forces.\\
+	Stress på legevakt er ofte preget av altfor mange på venterommet og mange misfornøyde pasienter. Så komer psykiatripasienten og stressnivået øker. Det siste du trenger er da en alvorlig skade eller trafikkulykke som ramler inn døra:
+		\subsection{Mann 17, skade på snowboard}
+		I Øvre Eiker kan dagene bli lange, særlig vinterstid og ikke alle liker ikke å gå på langrenn. Denne 17-åringen kom inn etter 3 minutters bevisstløshets, og et forsøk på å taues inn bak en snøskuter på et 15 meter langt hopp på flatmark. 
+		\begin{table}[ht]
+				\caption{Vitalia ved innkommst}
+				\centering
+				\rowcolors{1}{grey}{white}
+				\begin{tabular}{|p{7cm}| p{3cm}| p{6cm}|}
+					\hline
+					{\textbf Måling} & {\textbf Verdi} &{\textbf Kommentar}\\[0.75pt]
+					\hline
+					Airway & Puster spontant \newline Symmetrisk og sidelik \newline Thoraksbevegelse  & Vi følger A-B-C \\
+					\hline
+					Breathing & Overfladisk 30/min & Dette er patologisk verdi \newline avvent årsak foreløpig\\
+					\hline
+					Circulation & BT: 102/77, P 95 rgm & Er dette et begynnede sjokk?\\
+					\hline
+					Disability & GCS: 14/15 & Ung og som forventa\\
+					\hline
+					Exposure & Smerter flere steder, beskrives mer under & Nakkekrage(?), kommer i privatbil \newline Backboard?\\
+					\hline
+				\end{tabular}
+			\end{table}
+
+
 %Start på sjekklister, max 12 punkter per liste
 
 \appendix
