--- a/sjekkliste.tex
+++ b/sjekkliste.tex
@@ -59,13 +59,30 @@
 \newpage
 \chapter{Medisinske huskelister}
 	\section{Akuttmedisin}
+		Les mer på side \pageref{chap:desc_chk_akuttmed}
 		\subsection{A-HLR}
 			\begin{itemize}
 				\item
 			\end{itemize}
-		\subsection{Traume}
+		\subsection{Traume på legevakta}
+			Disse listene er beskrevet på side \pageref{sec:desc_chk_traume}.
 			\begin{itemize}
-				\item
+				\item Airway -sikre frie luftveier\\
+				\item Breathing - Monitorer pustefrekvensen\\
+				\item Circulation - BT, P \\
+				\item Disability - Gjennomfør Glacow coma scale\\
+				\item Exposure - Undersøk hele pasienten\\
+			\end{itemize}
+				\subsection{Traume som en del av ambulanseteamet}
+			\begin{itemize}
+				\item Start klokka\\
+				\item La ambulansepersonellet styre skadestedetm gjør som du får beskjed om\\
+				\item Hold det enkelt\\
+				\item Ikke glem luft for å få pasienten til sykehus innen en time\\
+				\item Følg ambulansen til sykehuset\\
+				\item Bli med inn i mottak og gi rapport\\
+				\item Stopp klokka og noter tida\\
+				\item Gi bekjed til sykepleier om hvor du er og når du kommer tilbake\\
 			\end{itemize}
 		\subsection{Anafylksi/Allergisk sjokk}
 			\begin{itemize}
