--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -89,15 +89,15 @@
 
 \chapter{Akuttmedisin}\label{chap:desc_chk_akuttmed}	
 	\section{Alvorlige skader på skadested eller legevakt}\label{sec:desc_chk_traume}
-	"Slow is smooth and smooth is fast" - US special forces.\\
+	
 	Stress på legevakt er ofte preget av altfor mange på venterommet og mange misfornøyde pasienter. Så komer psykiatripasienten og stressnivået øker. Det siste du trenger er da en alvorlig skade eller trafikkulykke som ramler inn døra:
-		\subsection{Mann 17, skade på snowboard}
+		\subsection{Gutt 17, skade på snowboard}
 		I Øvre Eiker kan dagene bli lange, særlig vinterstid og ikke alle liker ikke å gå på langrenn. Denne 17-åringen kom inn etter 3 minutters bevisstløshets, og et forsøk på å taues inn bak en snøskuter på et 15 meter langt hopp på flatmark. 
 		\begin{table}[ht]
 				\caption{Vitalia ved innkommst}
 				\centering
-				\rowcolors{1}{grey}{white}
-				\begin{tabular}{|p{7cm}| p{3cm}| p{6cm}|}
+				\rowcolors{1}{lightgray}{white}
+				\begin{tabular}{|p{3.5cm}| p{3cm}| p{6cm}|}
 					\hline
 					{\textbf Måling} & {\textbf Verdi} &{\textbf Kommentar}\\[0.75pt]
 					\hline
