Jobber litt med anafylaksi
Ikke testet. Lastet ned Lin sine notater til Evernote. rent gull lagret
Anafylkasioversikten her på PCen

--- a/Prosedyreboka.tex
+++ b/Prosedyreboka.tex
@@ -113,6 +113,7 @@
 					\hline
 				\end{tabular}
 			\end{table}
+		Gå igjennom sjekklista på side \pageref{sec:med_traum}. Hva ville du gjort? Sjekklisten er laget med utgangspunkt i gjeldende anbefalinger fra Norsk luftambulanse og Helsedirektoratet. 
 
 
 %Start på sjekklister, max 12 punkter per liste
@@ -128,7 +129,7 @@
 
 \input{./telefonepost.tex}
 %Kildehenvisinger
-
+%sjekk om man skal bruke \bibsection(memoir spesific)
 \begin{thebibliography}{99}
 
 \bibitem{manifesto}
