--- a/sjekkliste.tex
+++ b/sjekkliste.tex
@@ -64,7 +64,7 @@
 			\begin{itemize}
 				\item
 			\end{itemize}
-		\subsection{Traume på legevakta}
+		\subsection{Traume på legevakta}\label{sec:med_traum}
 			Disse listene er beskrevet på side \pageref{sec:desc_chk_traume}.
 			\begin{itemize}
 				\item Airway -sikre frie luftveier\\
@@ -84,9 +84,15 @@
 				\item Stopp klokka og noter tida\\
 				\item Gi bekjed til sykepleier om hvor du er og når du kommer tilbake\\
 			\end{itemize}
-		\subsection{Anafylksi/Allergisk sjokk}
+		\subsection{Anafylksi: Diagnose}
 			\begin{itemize}
-				\item
+				\item Hovedkriterium 1:\\ 
+					\begin{itemize}
+						\item Pustevansker\\
+						\item Gastrointestinale plager\\
+						\item Blodtrykk er under 100 systolisk\\
+						\item 
+
 			\end{itemize}
 	\section{Sutur}
 		\begin{itemize}
