Ufullstendig redigering a sjekkliste anafylaksi
Husk å lukke itemize på linje 94 i sjekkliste fila. Må lese Evernote
notat om anafylaksi

--- a/sjekkliste.tex
+++ b/sjekkliste.tex
@@ -91,7 +91,7 @@
 						\item Pustevansker\\
 						\item Gastrointestinale plager\\
 						\item Blodtrykk er under 100 systolisk\\
-						\item 
+						\item Hudutslett\\
 
 			\end{itemize}
 	\section{Sutur}
